Enhance effects descriptions and update wheel pointer style for better clarity and aesthetics

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div class="wheel-container">
             <canvas id="wheelCanvas" width="500" height="500"></canvas>
-            <div class="wheel-pointer">▼</div>
+            <div class="wheel-pointer">◀</div>
         </div>
         
         <button id="spinButton" class="spin-button" disabled>SPIN THE WHEEL!</button>
