Enhance title interactivity by adding hover effects and aria-labels for accessibility

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎯 BabyGoon 🎯</h1>
+        <h1><span class="title-target" id="cheatBlue" aria-label="Penalty bleu">🎯</span> BabyGoon <span class="title-target" id="cheatRed" aria-label="Penalty rouge">🎯</span></h1>
         
         <div class="wheel-container">
             <canvas id="wheelCanvas" width="500" height="500"></canvas>
