Update effect names and descriptions; enhance rarity logic and UI elements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="result-content">
                 <h3 id="effectName"></h3>
                 <div class="result-meta">
-                    <span id="rareBadge" class="rare-badge is-hidden">Rare *</span>
+                    <span id="rarityBadge" class="rare-badge is-hidden">Rare *</span>
                 </div>
                 <p id="effectDescription"></p>
                 <div class="bonus-status" id="bonusStatus"></div>
@@ -44,6 +44,7 @@
                 <ul>
                     <li>10 - 0 : Sous le baby</li>
                     <li>Balle attrapée en l'air : 1 points</li>
+                    <li>Une gamelle ne fait pas changer l'effet de la roue</li>
                 </ul>
             </div>
         </div>
