--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
         </div>
     </div>
     
-    <script src="assets/scripts/script.js"></script>
+    <script type="module" src="assets/scripts/app.js"></script>
 </body>
 </html>
