feat: implement stun countdown functionality with UI updates

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
                 <p id="effectDescription"></p>
                 <div class="bonus-status" id="bonusStatus"></div>
+                <button class="stun-button hidden" id="stunCountdownButton" type="button">Lancer le stun (7s)</button>
             </div>
         </div>
 
