--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BabyFoot Lottery - Babyfoot Lottery Wheel</title>
     <meta name="theme-color" content="#0f101a">
+    <link rel="icon" href="assets/icons/icon.svg" type="image/svg+xml">
     <link rel="manifest" href="assets/manifest.webmanifest">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
