--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1><span class="title-target" id="cheatBlue" aria-label="Penalty bleu">🎯</span> BabyFoot Lottery <span class="title-target" id="cheatRed" aria-label="Penalty rouge">🎯</span></h1>
+        <h1><span class="title-target" id="cheatBlue">🎯</span> BabyFoot Lottery <span class="title-target" id="cheatRed">🎯</span></h1>
         
         <div class="wheel-container">
             <canvas id="wheelCanvas" width="500" height="500"></canvas>
@@ -34,9 +34,8 @@
         </div>
 
         <div class="rules-modal is-hidden" id="rulesModal" role="dialog" aria-modal="true" aria-labelledby="rulesTitle">
-            <div class="rules-backdrop" data-rules-close></div>
             <div class="rules-panel">
-                <button class="rules-close" type="button" aria-label="Fermer" data-rules-close>✕</button>
+                <button class="rules-close" type="button" data-rules-close>✕</button>
                 <h3 id="rulesTitle">Règles supplémentaires</h3>
                 <ul id="rulesList">
                     <li>Chargement...</li>
@@ -45,14 +44,13 @@
         </div>
 
         <div class="rules-modal is-hidden" id="probabilitiesModal" role="dialog" aria-modal="true" aria-labelledby="probabilitiesTitle">
-            <div class="rules-backdrop" data-probabilities-close></div>
             <div class="rules-panel">
-                <button class="rules-close" type="button" aria-label="Fermer" data-probabilities-close>✕</button>
+                <button class="rules-close" type="button" data-probabilities-close>✕</button>
                 <h3 id="probabilitiesTitle">Probabilites des effets</h3>
                 <div class="probabilities-controls">
                     <div class="probabilities-filter">
                         <label for="probabilitiesFilter">Filtre rarete</label>
-                        <select id="probabilitiesFilter" aria-label="Filtrer par rarete">
+                        <select id="probabilitiesFilter">
                             <option value="all">Tous</option>
                             <option value="common">Commun</option>
                             <option value="rare">Rare</option>
@@ -68,7 +66,9 @@
             </div>
         </div>
 
-        <div class="bottom-actions" aria-label="Navigation">
+        <hr class="section-separator">
+
+        <div class="bottom-actions">
             <button class="rules-toggle" id="rulesToggle" type="button" aria-expanded="false" aria-controls="rulesModal">Règles</button>
             <button class="probabilities-toggle" id="probabilitiesToggle" type="button" aria-expanded="false" aria-controls="probabilitiesModal">Probabilites</button>
         </div>
