struct: JS to TS, add .bat and .sh for easy setup

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BabyFoot Lottery - Babyfoot Lottery Wheel</title>
     <meta name="theme-color" content="#0f101a">
-    <link rel="icon" href="assets/icons/icon.svg" type="image/svg+xml">
-    <link rel="manifest" href="assets/manifest.webmanifest">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" href="icons/icon.svg" type="image/svg+xml">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div class="container">
@@ -74,6 +74,6 @@
         </div>
     </div>
     
-    <script type="module" src="assets/scripts/app.js"></script>
+    <script type="module" src="dist/scripts/app.js"></script>
 </body>
 </html>
